fix z-index divider

--- a/src/styles.css
+++ b/src/styles.css
@@ -89,6 +89,10 @@ input:focus {
     overscroll-behavior: auto;
 }
 
+.z-neg-1 {
+    z-index: -1;
+}
+
 
 /*  CARD  */
 .card-border {
